mod'd for JDK compatibility